[package]
name = "distributed_kv_store"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI argument parsing
clap = { version = "4.3", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Optional: for persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.28", features = ["full"] }

[dev-dependencies]
tempfile = "3.3"